# pydft-qmmm

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api_docs.html  bibliography.html  genindex.html  getting_started.html  index.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: build_and_deploy.yml  docs.yml  test_and_coverage.yml
_autosummary/: pydft_qmmm.calculators.calculator.html  pydft_qmmm.calculators.composite_calculator.html  pydft_qmmm.calculators.html  pydft_qmmm.calculators.potential_calculator.html  pydft_qmmm.hamiltonians.hamiltonian.html  pydft_qmmm.hamiltonians.html  pydft_qmmm.hamiltonians.mm_hamiltonian.html  pydft_qmmm.hamiltonians.qm_hamiltonian.html  pydft_qmmm.hamiltonians.qmmm_hamiltonian.html  pydft_qmmm.integrators.html  pydft_qmmm.integrators.integrator.html  pydft_qmmm.integrators.langevin_integrator.html  pydft_qmmm.integrators.verlet_integrator.html  pydft_qmmm.interfaces.html  pydft_qmmm.interfaces.interface.html  pydft_qmmm.interfaces.interface_manager.html  pydft_qmmm.interfaces.openmm.html  pydft_qmmm.interfaces.openmm.openmm_factory.html  pydft_qmmm.interfaces.openmm.openmm_interface.html  pydft_qmmm.interfaces.openmm.openmm_utils.html  pydft_qmmm.interfaces.psi4.html  pydft_qmmm.interfaces.psi4.psi4_factory.html  pydft_qmmm.interfaces.psi4.psi4_interface.html  pydft_qmmm.interfaces.psi4.psi4_utils.html  pydft_qmmm.plugins.atom_partition.html  pydft_qmmm.plugins.center.html  pydft_qmmm.plugins.centroid_partition.html  pydft_qmmm.plugins.firstatom_partition.html  pydft_qmmm.plugins.html  pydft_qmmm.plugins.plugin_manager.html  pydft_qmmm.plugins.plumed.html  pydft_qmmm.plugins.rigid.html  pydft_qmmm.plugins.settle.html  pydft_qmmm.plugins.wrap.html  pydft_qmmm.potentials.html  pydft_qmmm.potentials.pme_potential.html  pydft_qmmm.potentials.potential.html  pydft_qmmm.system.atom.html  pydft_qmmm.system.file_manager.html  pydft_qmmm.system.html  (+13 more)
_autosummary/_autosummary/: pydft_qmmm.calculators.calculator.Calculator.html  pydft_qmmm.calculators.calculator.CalculatorPlugin.html  pydft_qmmm.calculators.calculator.Results.html  pydft_qmmm.calculators.composite_calculator.CompositeCalculator.html  pydft_qmmm.calculators.composite_calculator.CompositeCalculatorPlugin.html  pydft_qmmm.calculators.composite_calculator.PartitionPlugin.html  pydft_qmmm.calculators.potential_calculator.PotentialCalculator.html  pydft_qmmm.hamiltonians.hamiltonian.CompositeHamiltonian.html  pydft_qmmm.hamiltonians.hamiltonian.CouplingHamiltonian.html  pydft_qmmm.hamiltonians.hamiltonian.Hamiltonian.html  pydft_qmmm.hamiltonians.hamiltonian.PotentialHamiltonian.html  pydft_qmmm.hamiltonians.hamiltonian.StandaloneHamiltonian.html  pydft_qmmm.hamiltonians.mm_hamiltonian.MMHamiltonian.html  pydft_qmmm.hamiltonians.qm_hamiltonian.QMHamiltonian.html  pydft_qmmm.hamiltonians.qmmm_hamiltonian.QMMMHamiltonian.html  pydft_qmmm.integrators.integrator.Integrator.html  pydft_qmmm.integrators.integrator.IntegratorPlugin.html  pydft_qmmm.integrators.langevin_integrator.LangevinIntegrator.html  pydft_qmmm.integrators.verlet_integrator.VerletIntegrator.html  pydft_qmmm.interfaces.interface.MMInterface.html  pydft_qmmm.interfaces.interface.MMPotential.html  pydft_qmmm.interfaces.interface.QMInterface.html  pydft_qmmm.interfaces.interface.QMPotential.html  pydft_qmmm.interfaces.interface.SoftwareInterface.html  pydft_qmmm.interfaces.openmm.openmm_interface.OpenMMInterface.html  pydft_qmmm.interfaces.openmm.openmm_interface.OpenMMPotential.html  pydft_qmmm.interfaces.psi4.psi4_interface.Psi4Interface.html  pydft_qmmm.interfaces.psi4.psi4_interface.Psi4Potential.html  pydft_qmmm.plugins.atom_partition.AtomPartition.html  pydft_qmmm.plugins.center.CalculatorCenter.html  pydft_qmmm.plugins.center.IntegratorCenter.html  pydft_qmmm.plugins.centroid_partition.CentroidPartition.html  pydft_qmmm.plugins.firstatom_partition.FirstAtomPartition.html  pydft_qmmm.plugins.plumed.Plumed.html  pydft_qmmm.plugins.rigid.Stationary.html  pydft_qmmm.plugins.settle.SETTLE.html  pydft_qmmm.plugins.wrap.CalculatorWrap.html  pydft_qmmm.plugins.wrap.IntegratorWrap.html  pydft_qmmm.potentials.pme_potential.HelPMEPyInterface.html  pydft_qmmm.potentials.pme_potential.PMEElectronicPotential.html  (+28 more)
_modules/: index.html
_sources/: api_docs.rst.txt
_sources/_autosummary/: pydft_qmmm.calculators.calculator.rst.txt  pydft_qmmm.calculators.composite_calculator.rst.txt  pydft_qmmm.calculators.potential_calculator.rst.txt  pydft_qmmm.calculators.rst.txt  pydft_qmmm.hamiltonians.hamiltonian.rst.txt  (+48 more)
_static/: documentation_options.js
docs/: bibliography.rst  conf.py  genindex.html  getting_started.rst  index.html  index.rst  introduction.rst  modules.html  objects.inv  py-modindex.html  pydft_qmmm.calculators.html  pydft_qmmm.common.html  pydft_qmmm.common.utils.html  pydft_qmmm.hamiltonians.html  pydft_qmmm.html  pydft_qmmm.integrators.html  pydft_qmmm.interfaces.html  pydft_qmmm.interfaces.openmm.html  pydft_qmmm.interfaces.psi4.html  pydft_qmmm.interfaces.qmmm_pme_openmm.html  pydft_qmmm.interfaces.qmmm_pme_psi4.html  pydft_qmmm.plugins.atom_partition.html  pydft_qmmm.plugins.center.html  pydft_qmmm.plugins.centroid_partition.html  pydft_qmmm.plugins.firstatom_partition.html  pydft_qmmm.plugins.html  pydft_qmmm.plugins.plumed.html  pydft_qmmm.plugins.pme.html  pydft_qmmm.plugins.rigid.html  pydft_qmmm.plugins.settle.html  pydft_qmmm.plugins.wrap.html  pydft_qmmm.system.html  pydft_qmmm.wrappers.html  search.html  searchindex.js
docs/source/: conf.py  (+16 more)
pydft_qmmm/: __init__.py  __main__.py  _version.py
templates/interface_template/: pyproject.toml  setup.py
templates/interface_template/interface_template/: __init__.py  template_factory.py  template_interface.py  template_utils.py
templates/plugin_template/: pyproject.toml  setup.py
templates/plugin_template/plugin_template/: __init__.py  template_plugin.py
tests/: conftest.py  gradient_test.py  simulation_test.py
(+295 files in other folders)
