[metadata]
name = pydft_qmmm
version = 0.1.0
description = QM/MM Simulation Software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnppederson/pydft-qmmm
author = John Pederson
author_email = jpederson6@gatech.edu
license = LGPL-2.1
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*
    example*

[options.package_data]
* =
    *.conf

[bdist_wheel]
universal = True

[flake8]
max-line-length = 80
exclude =
    tests/*,
    testing/*,
    example/*,
    docs/source/conf.py,
    versioneer.py,
    pydft_qmmm/_version.py
per-file-ignores =
    pydft_qmmm/__init__.py:F401
    pydft_qmmm/*/__init__.py:F401
    pydft_qmmm/common/utils.py:E741

[versioneer]
VCS = git
style = pep440
versionfile_source = pydft_qmmm/_version.py
versionfile_build = pydft_qmmm/_version.py
tag_prefix = 'v'

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = method-assign
ignore_missing_imports = true
